<resources>
    <string name="app_name">THE JIREN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drills">
        AChestShouldersTricepsAbs</string>
    <string name="a_drills">Chest  Shoulders  Triceps  Abs</string>
    <string name="b_drills">Legs Back Biceps Abs</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="your_next_workout">your next workout:</string>
    <string name="home">HOME</string>
    <string name="main">MAIN</string>
    <string name="upper_body">UPPER BODY</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="kg">KG</string>
    <string name="next">NEXT</string>
    <string name="height">height:</string>
    <string name="user_height">height</string>
    <string name="years">years</string>
    <string name="user_weight">weight</string>
    <string name="weight">weight:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="lower_body">LOWER BODY</string>
    <string name="welcome">WELCOME!</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="cm">CM</string>
    <string name="finish">finish</string>
    <string name="my_info">MY INFO</string>
    <string name="age">age:</string>
    <string name="user_age">age</string>
    <string name="change_info_button">change info</string>
    <string name="jiren">JIREN</string>
    <string name="sign_out">sign out</string>
    <string name="chest">Chest</string>
    <string name="back">back</string>
    <string name="triceps">Triceps</string>
    <string name="biceps">Biceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="abs">ABS</string>
    <string name="back_muscle">Back Muscle</string>
    <string name="backwards">Backwards</string>
    <string name="description_text">description text</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="upper_crunch_and_twist">Upper Crunch And Twist</string>
    <string name="reverse_grip_pull_ups">Reverse Grip Pull Ups</string>
    <string name="straight_arm_push_downs">Straight Arm Push Downs</string>
    <string name="upper_back_row">Upper Back Row</string>
    <string name="pull_ups">Pull Ups</string>
    <string name="cable_preacher_curls">Cable Preacher Curls</string>
    <string name="db_spider_curls">DB Spider Curls</string>
    <string name="ez_bar_curls">EZ Bar Curls</string>
    <string name="decline_bench_press">Decline Bench Press</string>
    <string name="incline_db_chest_press">Incline DB Chest Press</string>
    <string name="incline_chest_machine">Incline Chest Machine</string>
    <string name="cable_fly">Cable Fly</string>
    <string name="lat_raises">Lat Raises</string>
    <string name="plate_upright_row">Plate Upright Row</string>
    <string name="db_front_raises">DB Front Raises</string>
    <string name="backDialog">BACK</string>
    <string name="absDialog">ABS</string>
    <string name="bicepsDialog">BICEPS</string>
    <string name="shouldersDialog">SHOULDERS</string>
    <string name="tricepsDialog">TRICEPS</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="glutes">Glutes</string>
    <string name="seated_ham_curls">seated ham curls</string>
    <string name="olympic_bar_lunges">olympic bar lunges</string>
    <string name="leg_ex">leg ex</string>
    <string name="description_details">Sets: Reps: Rest: </string>
    <string name="sets">sets</string>
    <string name="reps">reps</string>
    <string name="time">time</string>
</resources>