<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/enter_your_age"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age_edittext"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_age"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/years" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_edittext"
        android:layout_centerHorizontal="true"
        android:text="@string/finish" />


    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/height"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <TextView
        android:id="@+id/height_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/height_text"
        android:text="@string/user_height"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/weight"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <TextView
        android:id="@+id/weight_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/weight_text"
        android:text="@string/user_weight"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>