<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_video">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:baselineAlignBottom="true"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/jiren_upper_body"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alfa_slab_one"
        android:textColor="@color/Red"
        android:text="@string/upper_body"/>

    <RelativeLayout
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        tools:ignore="RtlHardcoded">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chest_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/chest_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:text="@string/chest"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="195dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/back_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/back"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/triceps_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/triceps_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:text="@string/triceps"
            android:fontFamily="@font/alfa_slab_one"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/biceps_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="325dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/biceps_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:text="@string/biceps"
            android:fontFamily="@font/alfa_slab_one"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shoulders_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="390dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/shoulders_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:text="@string/shoulders"
            android:fontFamily="@font/alfa_slab_one"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/abs_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="455dp"
            android:background="@drawable/muscle_button_background"
            android:drawableRight="@drawable/abs_btn_icon"
            android:paddingRight="25dp"
            android:textColor="@color/White"
            android:text="@string/abs"
            android:fontFamily="@font/alfa_slab_one"
            tools:ignore="RtlSymmetry" />


    </RelativeLayout>


</RelativeLayout>