<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alfa_slab_one"
            android:textColor="@color/Red"
            android:text="CHEST"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/White"
            android:id="@+id/incline_db_chest_press_btn"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/muscle_button_background"
            android:text="@string/incline_db_chest_press"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/White"
            android:id="@+id/incline_chest_machine_btn"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/muscle_button_background"
            android:text="@string/incline_chest_machine"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/White"
            android:id="@+id/decline_bench_press_btn"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/muscle_button_background"
            android:text="@string/decline_bench_press"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/White"
            android:id="@+id/Cable_Fly_btn"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/muscle_button_background"
            android:text="@string/cable_fly"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goBack_btn"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:background="@drawable/muscle_button_background"
            android:textColor="@color/White"
            android:text="@string/back"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:drawableRight="@drawable/backwards_btn_icon"
            android:paddingRight="16dp"
            android:fontFamily="@font/alfa_slab_one"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </RelativeLayout>
</RelativeLayout>