<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/Red"
        android:textSize="40sp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/enter_your_height"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height_edittext"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_height"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/cm" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height_edittext"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

</RelativeLayout>